[project]
name = "subscriptions-registry"
version = "0.1.0"
description = "Backend-ядро платформы «Умный реестр подписок»: учёт обязательств, расчёт дат списаний, контроль статусов"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "fastapi>=0.111",
    "pydantic-settings>=2.2",
    "python-dateutil>=2.9",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn[standard]>=0.29",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
